{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 11,
  "lineage": "bc3e9e98-4c18-c8c5-06dc-6a50d17d7ceb",
  "resources": [
    {
      "module": "module.atlasCluster.module.aws_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Locust_enpoint_Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:805976340371:security-group/sg-06677de6ce818125e",
            "description": "Allow ingress for locust",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Ports/Protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06677de6ce818125e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private Endpoint Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "locust_enpoint_rule",
            "name_prefix": "",
            "owner_id": "805976340371",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-976afafe"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.atlasCluster.module.aws_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "aws_endpoint_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:805976340371:vpc-endpoint/vpce-000ea2a1a1eff17b5",
            "dns_entry": [
              {
                "dns_name": "vpce-000ea2a1a1eff17b5-brtl4tm3.vpce-svc-00c3d4744fc9601ba.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-000ea2a1a1eff17b5-brtl4tm3-eu-central-1a.vpce-svc-00c3d4744fc9601ba.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              }
            ],
            "id": "vpce-000ea2a1a1eff17b5",
            "network_interface_ids": [
              "eni-0214df1b05067be1d"
            ],
            "owner_id": "805976340371",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06677de6ce818125e"
            ],
            "service_name": "com.amazonaws.vpce.eu-central-1.vpce-svc-00c3d4744fc9601ba",
            "state": "pendingAcceptance",
            "subnet_ids": [
              "subnet-8f523fe6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-976afafe"
          },
          "dependencies": [
            "module.atlasCluster.module.aws_network.aws_security_group.Locust_enpoint_Firewall",
            "module.atlasCluster.mongodbatlas_privatelink_endpoint.aws_endpoint"
          ]
        }
      ]
    },
    {
      "module": "module.locust",
      "mode": "managed",
      "type": "aws_instance",
      "name": "locust_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453cb7b5f2b7fca2",
            "arn": "arn:aws:ec2:eu-central-1:805976340371:instance/i-0204f0781d6339a6f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0204f0781d6339a6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "timo_private",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0911ade4834bfe3",
            "private_dns": "ip-172-31-13-181.eu-central-1.compute.internal",
            "private_ip": "172.31.13.181",
            "public_dns": "ec2-3-67-134-238.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.134.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09a1d511854f57a3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "LocustNodes_rule"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8f523fe6",
            "tags": {
              "Name": "locustMaster"
            },
            "tags_all": {
              "Name": "locustMaster"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f2e1bcac8054c9d"
            ]
          },
          "dependencies": [
            "module.locust.aws_security_group.Locust_Firewall",
            "module.locust.data.aws_ami.AWSlinux2"
          ]
        }
      ]
    },
    {
      "module": "module.locust",
      "mode": "managed",
      "type": "aws_instance",
      "name": "locust_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453cb7b5f2b7fca2",
            "arn": "arn:aws:ec2:eu-central-1:805976340371:instance/i-035c9e1292cabcaf9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035c9e1292cabcaf9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "timo_private",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5af27d937cc68be",
            "private_dns": "ip-172-31-11-22.eu-central-1.compute.internal",
            "private_ip": "172.31.11.22",
            "public_dns": "ec2-3-71-38-191.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.38.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069c653ecc95c4386",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "LocustNodes_rule"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8f523fe6",
            "tags": {
              "Name": "locust_worker"
            },
            "tags_all": {
              "Name": "locust_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f2e1bcac8054c9d"
            ]
          },
          "dependencies": [
            "module.locust.aws_security_group.Locust_Firewall",
            "module.locust.data.aws_ami.AWSlinux2"
          ]
        }
      ]
    },
    {
      "module": "module.locust",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Locust_Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:805976340371:security-group/sg-08f2e1bcac8054c9d",
            "description": "Allow ingress for locust",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Ports/Protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f2e1bcac8054c9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Locust Traffic",
                "from_port": 5557,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5557
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Locust Traffic",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LocustNodes_rule",
            "name_prefix": "",
            "owner_id": "805976340371",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-976afafe"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}